<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>eu.esa.snap</groupId>
    <artifactId>esa-snappy</artifactId>
    <version>12.0.0-SNAPSHOT</version>
    <packaging>nbm</packaging>

    <name>ESA SNAPPY</name>
    <description>
        This module provides the SNAP Python bridge 'esa_snappy' (formerly internal part of snap-engine).
    </description>

    <properties>
        <snap.version>12.0.0-SNAPSHOT</snap.version>
        <javahelp.version>2.0.05</javahelp.version>
        <netbeans.version>RELEASE210</netbeans.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.esa.snap</groupId>
            <artifactId>ceres-core</artifactId>
            <version>${snap.version}</version>
        </dependency>
        <dependency>
            <groupId>org.esa.snap</groupId>
            <artifactId>snap-core</artifactId>
            <version>${snap.version}</version>
        </dependency>
        <dependency>
            <groupId>org.esa.snap</groupId>
            <artifactId>snap-gpf</artifactId>
            <version>${snap.version}</version>
        </dependency>

        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-sendopts</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-options-api</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-awt</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util-ui</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util-lookup</artifactId>
            <version>${netbeans.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jpyconsortium</groupId>
            <artifactId>jpy</artifactId>
            <version>0.13.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.6.6</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.7.1</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <archive>
                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.netbeans.utilities</groupId>
                <artifactId>nbm-maven-plugin</artifactId>
                <version>4.4</version>
                <extensions>true</extensions>
                <dependencies>
                    <dependency>
                        <groupId>javax.help</groupId>
                        <artifactId>javahelp</artifactId>
                        <version>${javahelp.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <licenseName>GPL 3</licenseName>
                    <licenseFile>LICENSE.txt</licenseFile>
                    <homePageUrl>https://step.esa.int/main/</homePageUrl>
                    <requiresRestart>true</requiresRestart>
                    <!--                    <publicPackages>-->
                    <!--                        <publicPackage>eu.esa.snap.snappy</publicPackage>-->
                    <!--                    </publicPackages>-->
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <printSummary>true</printSummary>
                    <useFile>false</useFile>
                    <argLine>-Xmx1024M -Dfile.encoding=UTF-8</argLine>
                </configuration>
            </plugin>

        </plugins>


    </build>

    <repositories>
        <repository>
            <id>snap-repo-public</id>
            <name>Public Maven Repository for SNAP</name>
            <url>https://nexus.snap-ci.ovh/repository/snap-maven-public/</url>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>snap-repo-public</id>
            <name>Public Maven Repository for SNAP</name>
            <url>https://nexus.snap-ci.ovh/repository/snap-maven-releases/</url>
            <uniqueVersion>false</uniqueVersion>
        </repository>
        <snapshotRepository>
            <id>snap-repo-public</id>
            <name>Public Maven Snapshot Repository for SNAP</name>
            <url>https://nexus.snap-ci.ovh/repository/snap-maven-snapshot/</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>


    <pluginRepositories>
        <pluginRepository>
            <id>snap-repo-public</id>
            <name>Public Maven Repository for SNAP</name>
            <url>https://nexus.snap-ci.ovh/repository/snap-maven-public/</url>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

</project>

